<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_general"
        android:key="pref_category_general">
	    <CheckBoxPreference
	        android:key="pref_show_quickschedule"
	        android:title="@string/pref_show_quickschedule"
	        android:summary="@string/pref_show_quickschedule_summ"
	        android:defaultValue="true"/>
	</PreferenceCategory>
	<PreferenceCategory
	    android:title="@string/pref_category_schoolsoft"
	    android:key="pref_category_schoolsoft">
	    <EditTextPreference
	        android:key="pref_schoolsoft_username"
	        android:title="@string/pref_schoolsoft_username"/>
	    <EditTextPreference
	        android:key="pref_schoolsoft_password"
	        android:title="@string/pref_schoolsoft_password"
	        android:inputType="textPassword"/>
	    <Preference 
	        android:key="log_out"
	        android:title="Logga ut"/>
	</PreferenceCategory>
</PreferenceScreen>
