<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="25dp">
    <TextView 
        android:id="@+id/credits_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_schoolsoft_dialog_title"
        android:text="@string/credits_title"/>
    <TextView
        android:id="@+id/credits_title_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_schoolsoft_dialog_title_smaller"
        android:text="@string/credits_title_sub"/>
    <TextView 
        android:id="@+id/credits_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/credits_description"/>

</LinearLayout>
