<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:id="@+id/container_schedule"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
	   <LinearLayout
	        android:id="@+id/tabs"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:padding="10dp">
	        <TextView 
	            android:id="@+id/day_0"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="@dimen/day_tab_not_selected"
	            android:textColor="@color/white"
	            android:alpha="1.0"
	            android:text="@string/day_0"
				android:gravity="center_horizontal"
				android:onClick="onClick"
				android:clickable="true"/>
	        <TextView 
	            android:id="@+id/day_1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="@dimen/day_tab_not_selected"
	            android:textColor="@color/white"
	            android:alpha="0.6"
	            android:text="@string/day_1"
	            android:gravity="center_horizontal"
	            android:onClick="onClick"
				android:clickable="true"/>
	        <TextView 
	            android:id="@+id/day_2"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="@dimen/day_tab_not_selected"
	            android:textColor="@color/white"
	            android:alpha="0.6"
	            android:text="@string/day_2"
	            android:gravity="center_horizontal"
	            android:onClick="onClick"
				android:clickable="true"/>
	        <TextView 
	            android:id="@+id/day_3"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="@dimen/day_tab_not_selected"
	            android:textColor="@color/white"
	            android:alpha="0.6"
	            android:text="@string/day_3"
	            android:gravity="center_horizontal"
	            android:onClick="onClick"
				android:clickable="true"/>
	        <TextView 
	            android:id="@+id/day_4"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="@dimen/day_tab_not_selected"
	            android:textColor="@color/white"
	            android:alpha="0.6"
	            android:text="@string/day_4"
	            android:gravity="center_horizontal"
	            android:onClick="onClick"
				android:clickable="true"/>
	    </LinearLayout>
	    <android.support.v4.view.ViewPager
	        android:id="@+id/days_pager"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"/>
    </LinearLayout>
    <View
        android:id="@+id/darken_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.5"/>
    <LinearLayout
	    android:id="@+id/details_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:background="#75ffffff"
	    android:orientation="horizontal"
	    android:focusable="true"
	    android:focusableInTouchMode="true"/>
</FrameLayout>
